--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <form class="form" id="search-form">
+      <input
+        class="search-input"
+        id="search-input"
+        type="text"
+        placeholder="Search images..."
+      />
+      <button type="submit" class="button">Search</button>
+    </form>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+    <ul class="gallery"></ul>
 
-    <load src="./partials/footer.html" />
+    <span class="loader hidden">Loading images, please wait...</span>
+
+    <button type="button" class="load-more hidden">Load more</button>
 
     <script type="module" src="./main.js"></script>
   </body>
